# server/kiseki.go
@@ -21,6 +21,7 @@ type JobApplication struct {
 	DeletedAt   *time.Time
 	AppliedOn   time.Time
 	Status      JobApplicationStatus
+	Position    string
 }
 
 type NewJobApplicationParams struct {
@@ -33,11 +34,14 @@ type NewJobApplicationParams struct {
 	CoverLetter *string
 	AppliedOn   time.Time
 	Status      JobApplicationStatus
+	Position    string
 }
 
 func NewJobApplication(params NewJobApplicationParams) JobApplication {
+	now := time.Now()
+	id, _ := uuid.NewV7()
 	return JobApplication{
-		ID:          uuid.New().String(),
+		ID:          id.String(),
 		UserID:      params.UserID,
 		Company:     params.Company,
 		Title:       params.Title,
@@ -45,8 +49,11 @@ func NewJobApplication(params NewJobApplicationParams) JobApplication {
 		Notes:       params.Notes,
 		CV:          params.CV,
 		CoverLetter: params.CoverLetter,
+		CreatedAt:   now,
+		UpdatedAt:   now,
 		AppliedOn:   params.AppliedOn,
 		Status:      params.Status,
+		Position:    params.Position,
 	}
 }
 
@@ -64,6 +71,7 @@ type UpdateJobApplicationParams struct {
 	CoverLetter *string
 	AppliedOn   time.Time
 	Status      JobApplicationStatus
+	Position    string
 }
 
 func (j *JobApplication) Update(params UpdateJobApplicationParams) {
@@ -78,6 +86,7 @@ func (j *JobApplication) Update(params UpdateJobApplicationParams) {
 	j.CoverLetter = params.CoverLetter
 	j.AppliedOn = params.AppliedOn
 	j.Status = params.Status
+	j.Position = params.Position
 }
 
 // JobApplicationStatus is the domain enum for job application status.
